add 1.14 mob types

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -342,6 +342,7 @@
   "MOB_TYPE__BAT": "Fledermaus",
   "MOB_TYPE__BLAZE": "Lohe",
   "MOB_TYPE__CAVESPIDER": "Höhlenspinne",
+  "MOB_TYPE__CAT": "Katze",
   "MOB_TYPE__CHICKEN": "Huhn",
   "MOB_TYPE__COD": "Kabeljau",
   "MOB_TYPE__COW": "Kuh",
@@ -354,6 +355,7 @@
   "MOB_TYPE__ENDERMAN": "Enderman",
   "MOB_TYPE__ENDERMITE": "Endermilbe",
   "MOB_TYPE__EVOKER": "Magier",
+  "MOB_TYPE__FOX": "Fuchs",
   "MOB_TYPE__GHAST": "Ghast",
   "MOB_TYPE__GIANT": "Riese",
   "MOB_TYPE__GUARDIAN": "Wächter",
@@ -366,13 +368,16 @@
   "MOB_TYPE__MOOSHROOM": "Pilzkuh",
   "MOB_TYPE__MULE": "Esel",
   "MOB_TYPE__OCELOT": "Ozelot",
+  "MOB_TYPE__PANDA": "Panda",
   "MOB_TYPE__PARROT": "Papagei",
   "MOB_TYPE__PHANTOM": "Phantom",
   "MOB_TYPE__PIG": "Schwein",
   "MOB_TYPE__PIGZOMBIE": "Zombie-Schweinemann",
+  "MOB_TYPE__PILLAGER": "Plünderer",
   "MOB_TYPE__POLARBEAR": "Eisbär",
   "MOB_TYPE__PUFFERFISH": "Kugelfisch",
   "MOB_TYPE__RABBIT": "Kaninchen",
+  "MOB_TYPE__RAVAGER": "Verwüster",
   "MOB_TYPE__SALMON": "Lachs",
   "MOB_TYPE__SHEEP": "Schaf",
   "MOB_TYPE__SILVERFISH": "Silberfisch",
@@ -383,12 +388,14 @@
   "MOB_TYPE__SPIDER": "Spinne",
   "MOB_TYPE__SQUID": "Tintenfisch",
   "MOB_TYPE__STRAY": "Eiswanderer",
+  "MOB_TYPE__TRADERLLAMA": "Händerlama",
   "MOB_TYPE__TROPICALFISH": "Tropenfisch",
   "MOB_TYPE__TURTLE": "Schildkröte",
   "MOB_TYPE__VEX": "Plagegeist",
   "MOB_TYPE__VILLAGER": "Dorfbewohner",
   "MOB_TYPE__VINDICATOR": "Diener",
   "MOB_TYPE__WITCH": "Hexe",
+  "MOB_TYPE__WANDERINGTRADER": "Fahrender Händler",
   "MOB_TYPE__WITHER": "Wither",
   "MOB_TYPE__WITHERSKELETON": "Witherskelett",
   "MOB_TYPE__WOLF": "Wolf",
