--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -341,6 +341,7 @@
 
   "MOB_TYPE__BAT": "Bat",
   "MOB_TYPE__BLAZE": "Blaze",
+  "MOB_TYPE__CAT": "Cat",
   "MOB_TYPE__CAVESPIDER": "Cave Spider",
   "MOB_TYPE__CHICKEN": "Chicken",
   "MOB_TYPE__COD": "Cod",
@@ -354,6 +355,7 @@
   "MOB_TYPE__ENDERMAN": "Enderman",
   "MOB_TYPE__ENDERMITE": "Endermite",
   "MOB_TYPE__EVOKER": "Evoker",
+  "MOB_TYPE__FOX": "Fox",
   "MOB_TYPE__GHAST": "Ghast",
   "MOB_TYPE__GIANT": "Giant",
   "MOB_TYPE__GUARDIAN": "Guardian",
@@ -366,13 +368,16 @@
   "MOB_TYPE__MOOSHROOM": "Mooshroom",
   "MOB_TYPE__MULE": "Mule",
   "MOB_TYPE__OCELOT": "Ocelot",
+  "MOB_TYPE__PANDA": "Panda",
   "MOB_TYPE__PARROT": "Parrot",
   "MOB_TYPE__PHANTOM": "Phantom",
   "MOB_TYPE__PIG": "Pig",
   "MOB_TYPE__PIGZOMBIE": "Zombie Pigman",
+  "MOB_TYPE__PILLAGER": "Pillager",
   "MOB_TYPE__POLARBEAR": "PolarBear",
   "MOB_TYPE__PUFFERFISH": "Pufferfish",
   "MOB_TYPE__RABBIT": "Rabbit",
+  "MOB_TYPE__RAVAGER": "Ravager",
   "MOB_TYPE__SALMON": "Salmon",
   "MOB_TYPE__SHEEP": "Sheep",
   "MOB_TYPE__SILVERFISH": "Silverfish",
@@ -383,11 +388,13 @@
   "MOB_TYPE__SPIDER": "Spider",
   "MOB_TYPE__SQUID": "Squid",
   "MOB_TYPE__STRAY": "Stray",
+  "MOB_TYPE__TRADERLLAMA": "Trader Llama",
   "MOB_TYPE__TROPICALFISH": "Tropical Fish",
   "MOB_TYPE__TURTLE": "Turtle",
   "MOB_TYPE__VEX": "Vex",
   "MOB_TYPE__VILLAGER": "Villager",
   "MOB_TYPE__VINDICATOR": "Vindicator",
+  "MOB_TYPE__WANDERINGTRADER": "Wandering Trader",
   "MOB_TYPE__WITCH": "Witch",
   "MOB_TYPE__WITHER": "Wither",
   "MOB_TYPE__WITHERSKELETON": "Wither Skeleton",
