allow editing of level rules implements xXKeyleXx/MyPet#1260

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1,4 +1,8 @@
 {
+  "__TRANSLATION": {
+    "BY": "Keyle"
+  },
+
   "COMPONENTS__NOT_YET_IMPLEMENTED": "Noch nicht implementiert",
 
   "COMPONENTS__ABOUT__ABOUT": "Über",
@@ -94,18 +98,20 @@
   "COMPONENTS__SKILLTREE_CREATOR__CLOSE": "Skilltree Creator schließen",
   "COMPONENTS__SKILLTREE_CREATOR__CLOSE_DONE": "Du kannst dieses Fenster jetzt schließen.",
 
-  "COMPONENTS__UPGRADE_ADD_DIALOG__ADD_UPGRADE": "Upgrade hinzufügen",
-  "COMPONENTS__UPGRADE_ADD_DIALOG__LEVEL": "Level",
-  "COMPONENTS__UPGRADE_ADD_DIALOG__LEVELS": "Level (Leerzeichen/Komma separiert)",
-  "COMPONENTS__UPGRADE_ADD_DIALOG__EVERY": "Jedes",
-  "COMPONENTS__UPGRADE_ADD_DIALOG__START_LEVEL": "Starte bei Level",
-  "COMPONENTS__UPGRADE_ADD_DIALOG__UNTIL_LEVEL": "Bis Level",
-  "COMPONENTS__UPGRADE_ADD_DIALOG__ADD": "Hinzufügen",
-  "COMPONENTS__UPGRADE_ADD_DIALOG__OPTIONAL": "(Optional)",
-  "COMPONENTS__UPGRADE_ADD_DIALOG__REQUIRED": "(Benötigt)",
-  "COMPONENTS__UPGRADE_ADD_DIALOG__DYNAMIC": "Dynamisch",
-  "COMPONENTS__UPGRADE_ADD_DIALOG__FIXED": "Fest",
-  "COMPONENTS__UPGRADE_ADD_DIALOG__ERROR_RULE_DUPLICATED": "Es gibt bereits eine Regel mit diesen Werten.",
+  "COMPONENTS__UPGRADE_DIALOG__ADD_UPGRADE": "Upgrade hinzufügen",
+  "COMPONENTS__UPGRADE_DIALOG__EDIT_UPGRADE": "Upgrade bearbeiten",
+  "COMPONENTS__UPGRADE_DIALOG__LEVEL": "Level",
+  "COMPONENTS__UPGRADE_DIALOG__LEVELS": "Level (Leerzeichen/Komma separiert)",
+  "COMPONENTS__UPGRADE_DIALOG__EVERY": "Jedes",
+  "COMPONENTS__UPGRADE_DIALOG__START_LEVEL": "Starte bei Level",
+  "COMPONENTS__UPGRADE_DIALOG__UNTIL_LEVEL": "Bis Level",
+  "COMPONENTS__UPGRADE_DIALOG__DONE": "Fertig",
+  "COMPONENTS__UPGRADE_DIALOG__CANCEL": "Abbrechen",
+  "COMPONENTS__UPGRADE_DIALOG__OPTIONAL": "(Optional)",
+  "COMPONENTS__UPGRADE_DIALOG__REQUIRED": "(Benötigt)",
+  "COMPONENTS__UPGRADE_DIALOG__DYNAMIC": "Dynamisch",
+  "COMPONENTS__UPGRADE_DIALOG__FIXED": "Fest",
+  "COMPONENTS__UPGRADE_DIALOG__ERROR_RULE_DUPLICATED": "Es gibt bereits eine Regel mit diesen Werten.",
 
   "COMPONENTS__LEVELUP_NOTIFICATION_ADD_DIALOG__ADD_UPGRADE": "Upgrade hinzufügen",
   "COMPONENTS__LEVELUP_NOTIFICATION_ADD_DIALOG__LEVEL": "Level",
@@ -149,6 +155,7 @@
   "COMPONENTS__SKILLTREE_REQUIREMENTS__SKILLTREE__SKILLTREE": "Skilltrees",
 
   "COMPONENTS__SKILLS__DELETE": "Löschen",
+  "COMPONENTS__SKILLS__EDIT": "Bearbeiten",
   "COMPONENTS__SKILLS__YES": "Ja",
   "COMPONENTS__SKILLS__NO": "Nein",
   "COMPONENTS__SKILLS__DONT_CHANGE": "Nicht ändern",
