--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,4 +1,8 @@
 {
+  "__TRANSLATION": {
+    "BY": "Keyle"
+  },
+
   "COMPONENTS__NOT_YET_IMPLEMENTED": "Not yet implemented",
 
   "COMPONENTS__ABOUT__ABOUT": "About",
@@ -94,18 +98,20 @@
   "COMPONENTS__SKILLTREE_CREATOR__CLOSE": "Close the Skilltree Creator",
   "COMPONENTS__SKILLTREE_CREATOR__CLOSE_DONE": "You can close this window now.",
 
-  "COMPONENTS__UPGRADE_ADD_DIALOG__ADD_UPGRADE": "Add Upgrade",
-  "COMPONENTS__UPGRADE_ADD_DIALOG__LEVEL": "Level",
-  "COMPONENTS__UPGRADE_ADD_DIALOG__LEVELS": "Levels (space/comma seperated)",
-  "COMPONENTS__UPGRADE_ADD_DIALOG__EVERY": "Every",
-  "COMPONENTS__UPGRADE_ADD_DIALOG__START_LEVEL": "Start from level",
-  "COMPONENTS__UPGRADE_ADD_DIALOG__UNTIL_LEVEL": "Until level",
-  "COMPONENTS__UPGRADE_ADD_DIALOG__ADD": "Add",
-  "COMPONENTS__UPGRADE_ADD_DIALOG__OPTIONAL": "(Optional)",
-  "COMPONENTS__UPGRADE_ADD_DIALOG__REQUIRED": "(Required)",
-  "COMPONENTS__UPGRADE_ADD_DIALOG__DYNAMIC": "Dynamic",
-  "COMPONENTS__UPGRADE_ADD_DIALOG__FIXED": "Fixed",
-  "COMPONENTS__UPGRADE_ADD_DIALOG__ERROR_RULE_DUPLICATED": "There is already a rule with these values.",
+  "COMPONENTS__UPGRADE_DIALOG__ADD_UPGRADE": "Add Upgrade",
+  "COMPONENTS__UPGRADE_DIALOG__EDIT_UPGRADE": "Edit Upgrade",
+  "COMPONENTS__UPGRADE_DIALOG__LEVEL": "Level",
+  "COMPONENTS__UPGRADE_DIALOG__LEVELS": "Levels (space/comma seperated)",
+  "COMPONENTS__UPGRADE_DIALOG__EVERY": "Every",
+  "COMPONENTS__UPGRADE_DIALOG__START_LEVEL": "Start from level",
+  "COMPONENTS__UPGRADE_DIALOG__UNTIL_LEVEL": "Until level",
+  "COMPONENTS__UPGRADE_DIALOG__DONE": "Done",
+  "COMPONENTS__UPGRADE_DIALOG__CANCEL": "Cancel",
+  "COMPONENTS__UPGRADE_DIALOG__OPTIONAL": "(Optional)",
+  "COMPONENTS__UPGRADE_DIALOG__REQUIRED": "(Required)",
+  "COMPONENTS__UPGRADE_DIALOG__DYNAMIC": "Dynamic",
+  "COMPONENTS__UPGRADE_DIALOG__FIXED": "Fixed",
+  "COMPONENTS__UPGRADE_DIALOG__ERROR_RULE_DUPLICATED": "There is already a rule with these values.",
 
   "COMPONENTS__LEVELUP_NOTIFICATION_ADD_DIALOG__ADD_UPGRADE": "Add Upgrade",
   "COMPONENTS__LEVELUP_NOTIFICATION_ADD_DIALOG__LEVEL": "Level",
@@ -149,6 +155,7 @@
   "COMPONENTS__SKILLTREE_REQUIREMENTS__SKILLTREE__SKILLTREE": "Skilltrees",
 
   "COMPONENTS__SKILLS__DELETE": "Delete",
+  "COMPONENTS__SKILLS__EDIT": "Edit",
   "COMPONENTS__SKILLS__YES": "Yes",
   "COMPONENTS__SKILLS__NO": "No",
   "COMPONENTS__SKILLS__DONT_CHANGE": "Don't change",
