--- a/src/assets/i18n/zh.json
+++ b/src/assets/i18n/zh.json
@@ -94,18 +94,18 @@
   "COMPONENTS__SKILLTREE_CREATOR__CLOSE": "关闭技能树编辑器",
   "COMPONENTS__SKILLTREE_CREATOR__CLOSE_DONE": "你现在可以关闭此窗口.",
 
-  "COMPONENTS__UPGRADE_ADD_DIALOG__ADD_UPGRADE": "添加升级规则",
-  "COMPONENTS__UPGRADE_ADD_DIALOG__LEVEL": "级",
-  "COMPONENTS__UPGRADE_ADD_DIALOG__LEVELS": "等级 (空格/逗号 分隔)",
-  "COMPONENTS__UPGRADE_ADD_DIALOG__EVERY": "升级间隔",
-  "COMPONENTS__UPGRADE_ADD_DIALOG__START_LEVEL": "起始等级",
-  "COMPONENTS__UPGRADE_ADD_DIALOG__UNTIL_LEVEL": "结束等级",
-  "COMPONENTS__UPGRADE_ADD_DIALOG__ADD": "添加",
-  "COMPONENTS__UPGRADE_ADD_DIALOG__OPTIONAL": "(选择项)",
-  "COMPONENTS__UPGRADE_ADD_DIALOG__REQUIRED": "(需求)",
-  "COMPONENTS__UPGRADE_ADD_DIALOG__DYNAMIC": "动态",
-  "COMPONENTS__UPGRADE_ADD_DIALOG__FIXED": "静态",
-  "COMPONENTS__UPGRADE_ADD_DIALOG__ERROR_RULE_DUPLICATED": "已经有一个规则具有这些值了.",
+  "COMPONENTS__UPGRADE_DIALOG__ADD_UPGRADE": "添加升级规则",
+  "COMPONENTS__UPGRADE_DIALOG__LEVEL": "级",
+  "COMPONENTS__UPGRADE_DIALOG__LEVELS": "等级 (空格/逗号 分隔)",
+  "COMPONENTS__UPGRADE_DIALOG__EVERY": "升级间隔",
+  "COMPONENTS__UPGRADE_DIALOG__START_LEVEL": "起始等级",
+  "COMPONENTS__UPGRADE_DIALOG__UNTIL_LEVEL": "结束等级",
+  "COMPONENTS__UPGRADE_DIALOG__DONE": "完成",
+  "COMPONENTS__UPGRADE_DIALOG__OPTIONAL": "(选择项)",
+  "COMPONENTS__UPGRADE_DIALOG__REQUIRED": "(需求)",
+  "COMPONENTS__UPGRADE_DIALOG__DYNAMIC": "动态",
+  "COMPONENTS__UPGRADE_DIALOG__FIXED": "静态",
+  "COMPONENTS__UPGRADE_DIALOG__ERROR_RULE_DUPLICATED": "已经有一个规则具有这些值了.",
 
   "COMPONENTS__LEVELUP_NOTIFICATION_ADD_DIALOG__ADD_UPGRADE": "添加升级规则",
   "COMPONENTS__LEVELUP_NOTIFICATION_ADD_DIALOG__LEVEL": "级",
