🌐 improve wording for checkbox hints

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -156,11 +156,11 @@
 
   "COMPONENTS__SKILLS__DELETE": "Löschen",
   "COMPONENTS__SKILLS__EDIT": "Bearbeiten",
-  "COMPONENTS__SKILLS__YES": "Ja",
-  "COMPONENTS__SKILLS__NO": "Nein",
-  "COMPONENTS__SKILLS__DONT_CHANGE": "Nicht ändern",
-  "COMPONENTS__SKILLS__ACTIVATE": "Aktivieren",
-  "COMPONENTS__SKILLS__DEACTIVATE": "Deaktivieren",
+  "COMPONENTS__SKILLS__YES": "Aktueller Status: Ja",
+  "COMPONENTS__SKILLS__NO": "Aktueller Status: Nein",
+  "COMPONENTS__SKILLS__DONT_CHANGE": "Aktueller Status: Nicht ändern",
+  "COMPONENTS__SKILLS__ACTIVATE": "Aktueller Status: Aktivieren",
+  "COMPONENTS__SKILLS__DEACTIVATE": "Aktueller Status: Deaktivieren",
   "COMPONENTS__SKILLS__ERROR_FORMAT": "Ungültiger Wert! Format: {{format}}",
   "COMPONENTS__SKILLS__BACKPACK__ROWS": "Reihen",
   "COMPONENTS__SKILLS__BACKPACK__ROWS_SUFFIX": "Reihen",
