--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -156,11 +156,11 @@
 
   "COMPONENTS__SKILLS__DELETE": "Delete",
   "COMPONENTS__SKILLS__EDIT": "Edit",
-  "COMPONENTS__SKILLS__YES": "Yes",
-  "COMPONENTS__SKILLS__NO": "No",
-  "COMPONENTS__SKILLS__DONT_CHANGE": "Don't change",
-  "COMPONENTS__SKILLS__ACTIVATE": "Activate",
-  "COMPONENTS__SKILLS__DEACTIVATE": "Deactivate",
+  "COMPONENTS__SKILLS__YES": "Current status: Yes",
+  "COMPONENTS__SKILLS__NO": "Current status: No",
+  "COMPONENTS__SKILLS__DONT_CHANGE": "Current status: Don't change",
+  "COMPONENTS__SKILLS__ACTIVATE": "Current status: Activate",
+  "COMPONENTS__SKILLS__DEACTIVATE": "Current status: Deactivate",
   "COMPONENTS__SKILLS__ERROR_FORMAT": "Invalid value! Format: {{format}}",
   "COMPONENTS__SKILLS__BACKPACK__ROWS": "Rows",
   "COMPONENTS__SKILLS__BACKPACK__ROWS_SUFFIX": "rows",
