🌐 adjust translation from meters to blocks

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -259,18 +259,18 @@
   "COMPONENTS__SKILLS__LIFE_HEALTH_POPUP": "<p>Das Leben welches das Pet zusätzlich erhält.<br>Format: [+-][Nummer]<br>Beispiele:<br>+2<br>-3</p>",
   "COMPONENTS__SKILLS__PICKUP__RANGE": "Reichweite",
   "COMPONENTS__SKILLS__PICKUP__RANGE_PREFIX": "",
-  "COMPONENTS__SKILLS__PICKUP__RANGE_SUFFIX": "Meter",
+  "COMPONENTS__SKILLS__PICKUP__RANGE_SUFFIX": "Blöcke",
   "COMPONENTS__SKILLS__PICKUP__RANGE_POPUP": "<p>Die Reichweite, in der das Pet Gegenstände/Erfahrungspunkte aufhebt.<br>Format: [+-][Nummer]<br>Beispiele:<br>+2<br>-3</p>",
   "COMPONENTS__SKILLS__PICKUP__EXP": "Kann Erfahrungspunkte aufheben?",
   "COMPONENTS__SKILLS__SPRINT__ACTIVE": "Aktiv?",
   "COMPONENTS__SKILLS__RIDE__ACTIVE": "Aktiv?",
   "COMPONENTS__SKILLS__RIDE__FLY_REGEN": "Flugdauerregenerierungsrate",
   "COMPONENTS__SKILLS__RIDE__FLY_REGEN_PREFIX": "",
-  "COMPONENTS__SKILLS__RIDE__FLY_REGEN_SUFFIX": "Meter/Tick",
+  "COMPONENTS__SKILLS__RIDE__FLY_REGEN_SUFFIX": "Blöcke/Tick",
   "COMPONENTS__SKILLS__RIDE__FLY_REGEN_POPUP": "<p>Wird nur benötigt wenn das Fluglimit auch aktiv ist.<br>Gibt an wie schnell das Pet sich erholt und weiterfliegen kann.<br>Format: [+-][Nummer]<br>Beispiele:<br>+2<br>-3</p>",
   "COMPONENTS__SKILLS__RIDE__FLY_LIMIT": "Flug-Limit",
   "COMPONENTS__SKILLS__RIDE__FLY_LIMIT_PREFIX": "",
-  "COMPONENTS__SKILLS__RIDE__FLY_LIMIT_SUFFIX": "Meter",
+  "COMPONENTS__SKILLS__RIDE__FLY_LIMIT_SUFFIX": "Blöcke",
   "COMPONENTS__SKILLS__RIDE__FLY_LIMIT_POPUP": "<p>Limitiert wie lange das Pet fliegen kann.<br>0 deaktiviert das Limit.<br>Format: [+-][Nummer]<br>Beispiele:<br>+2<br>-3</p>",
   "COMPONENTS__SKILLS__RIDE__CAN_FLY": "Kann fliegen?",
   "COMPONENTS__SKILLS__RIDE__JUMP_HEIGHT": "Sprunghöhe",
@@ -283,7 +283,7 @@
   "COMPONENTS__SKILLS__RIDE__SPEED_POPUP": "<p>Gibt an wie viel Prozent das Pet schneller geritten werdeb kann.<br>Format: [+-][Nummer]<br>Beispiele:<br>+2<br>-3</p>",
   "COMPONENTS__SKILLS__BEACON__RANGE": "Buff-Reichweite",
   "COMPONENTS__SKILLS__BEACON__RANGE_PREFIX": "",
-  "COMPONENTS__SKILLS__BEACON__RANGE_SUFFIX": "Meter",
+  "COMPONENTS__SKILLS__BEACON__RANGE_SUFFIX": "Blöcke",
   "COMPONENTS__SKILLS__BEACON__RANGE_POPUP": "<p>Die ANzahl an Buffs die gleichzeitig aktiv sein können.<br>Format: [+-][Nummer]<br>Beispiele:<br>+5<br>-13</p>",
   "COMPONENTS__SKILLS__BEACON__DURATION": "Buff-Dauer",
   "COMPONENTS__SKILLS__BEACON__DURATION_PREFIX": "",
@@ -341,7 +341,7 @@
   "EFFECT__IMPORT_SKILLTREE_FAILED__DUPLICATE": "Es gibt bereits einen Skilltree mit dieser ID: {{id}}",
   "EFFECT__IMPORT_SKILLTREE_SUCCESS": "Skilltree erfolgreich importiert.",
   "EFFECT__LOAD_SKILLTREE_SUCCESS": "Skilltrees erfolgreich geladen.",
-  "EFFECT__LOAD_SKILLTREE_FAILED": "Skilltrees wurden nicht geladen!",
+  "EFFECT__LOAD_SKILLTREE_FAILED": "Skilltrees konnten nicht geladen werden! Läuft das Programm?",
   "EFFECT__SAVE_SKILLTREE_SUCCESS": "Skilltrees gespeichert!",
   "EFFECT__SAVE_SKILLTREE_FAILED": "Ein Fehler ist während des Speicherns aufgetreten!",
   "EFFECT__RENAME_SKILLTREE__SUCCESS": "{{old}} wurde zu {{new}} umbenannt.",
