--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -259,18 +259,18 @@
   "COMPONENTS__SKILLS__LIFE_HEALTH_POPUP": "<p>The amount of extra health the pet will get.<br>Format: [+-][number]<br>Examples:<br>+2<br>-3</p>",
   "COMPONENTS__SKILLS__PICKUP__RANGE": "Range",
   "COMPONENTS__SKILLS__PICKUP__RANGE_PREFIX": "",
-  "COMPONENTS__SKILLS__PICKUP__RANGE_SUFFIX": "meters",
+  "COMPONENTS__SKILLS__PICKUP__RANGE_SUFFIX": "blocks",
   "COMPONENTS__SKILLS__PICKUP__RANGE_POPUP": "<p>The range where blocks will be picked up by the pet.<br>Format: [+-][number]<br>Examples:<br>+2<br>-3</p>",
   "COMPONENTS__SKILLS__PICKUP__EXP": "Can pick up exp?",
   "COMPONENTS__SKILLS__SPRINT__ACTIVE": "Active?",
   "COMPONENTS__SKILLS__RIDE__ACTIVE": "Active?",
   "COMPONENTS__SKILLS__RIDE__FLY_REGEN": "Fly Regen Rate",
   "COMPONENTS__SKILLS__RIDE__FLY_REGEN_PREFIX": "",
-  "COMPONENTS__SKILLS__RIDE__FLY_REGEN_SUFFIX": "meters/tick",
+  "COMPONENTS__SKILLS__RIDE__FLY_REGEN_SUFFIX": "blocks/tick",
   "COMPONENTS__SKILLS__RIDE__FLY_REGEN_POPUP": "<p>Only needed when the fly limit is active.<br>How fast the pet can fly again.<br>Format: [+-][number]<br>Examples:<br>+2<br>-3</p>",
   "COMPONENTS__SKILLS__RIDE__FLY_LIMIT": "Fly Limit",
   "COMPONENTS__SKILLS__RIDE__FLY_LIMIT_PREFIX": "",
-  "COMPONENTS__SKILLS__RIDE__FLY_LIMIT_SUFFIX": "meters",
+  "COMPONENTS__SKILLS__RIDE__FLY_LIMIT_SUFFIX": "blocks",
   "COMPONENTS__SKILLS__RIDE__FLY_LIMIT_POPUP": "<p>Limit how long the pet can fly.<br>Setting it to 0 will disable the limit.<br>Format: [+-][number]<br>Examples:<br>+2<br>-3</p>",
   "COMPONENTS__SKILLS__RIDE__CAN_FLY": "Can Fly?",
   "COMPONENTS__SKILLS__RIDE__JUMP_HEIGHT": "Jump Height",
@@ -283,7 +283,7 @@
   "COMPONENTS__SKILLS__RIDE__SPEED_POPUP": "<p>The speed at which the owner can ride the pet.<br>Format: [+-][number]<br>Examples:<br>+2<br>-3</p>",
   "COMPONENTS__SKILLS__BEACON__RANGE": "Buff Range",
   "COMPONENTS__SKILLS__BEACON__RANGE_PREFIX": "",
-  "COMPONENTS__SKILLS__BEACON__RANGE_SUFFIX": "meters",
+  "COMPONENTS__SKILLS__BEACON__RANGE_SUFFIX": "blocks",
   "COMPONENTS__SKILLS__BEACON__RANGE_POPUP": "<p>The amount of buffs the owner of the pet can select at once.<br>Format: [+-][number]<br>Examples:<br>+5<br>-13</p>",
   "COMPONENTS__SKILLS__BEACON__DURATION": "Buff duration",
   "COMPONENTS__SKILLS__BEACON__DURATION_PREFIX": "",
@@ -341,7 +341,7 @@
   "EFFECT__IMPORT_SKILLTREE_FAILED__DUPLICATE": "There is already a skilltree with this id: {{id}}",
   "EFFECT__IMPORT_SKILLTREE_SUCCESS": "Skilltree imported successfully.",
   "EFFECT__LOAD_SKILLTREE_SUCCESS": "Skilltrees loaded successfully.",
-  "EFFECT__LOAD_SKILLTREE_FAILED": "Skilltrees loading failed!",
+  "EFFECT__LOAD_SKILLTREE_FAILED": "Skilltrees loading failed! Is the programm running?",
   "EFFECT__SAVE_SKILLTREE_SUCCESS": "Skilltrees saved!",
   "EFFECT__SAVE_SKILLTREE_FAILED": "An error occured while saving the skilltrees!",
   "EFFECT__RENAME_SKILLTREE__SUCCESS": "{{old}} was renamed to {{new}}",
