--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -367,6 +367,7 @@
   "MOB_TYPE__GHAST": "Ghast",
   "MOB_TYPE__GIANT": "Riese",
   "MOB_TYPE__GUARDIAN": "Wächter",
+  "MOB_TYPE__HOGLIN": "Hoglin",
   "MOB_TYPE__HORSE": "Pferd",
   "MOB_TYPE__HUSK": "Wüstenzombie",
   "MOB_TYPE__ILLUSIONER": "Illusionist",
@@ -380,7 +381,8 @@
   "MOB_TYPE__PARROT": "Papagei",
   "MOB_TYPE__PHANTOM": "Phantom",
   "MOB_TYPE__PIG": "Schwein",
-  "MOB_TYPE__PIGZOMBIE": "Zombie-Schweinemann",
+  "MOB_TYPE__PIGLIN": "Piglin",
+  "MOB_TYPE__PIGZOMBIE": "Zombie-Schweinemann / Zombifizierter Piglin",
   "MOB_TYPE__PILLAGER": "Plünderer",
   "MOB_TYPE__POLARBEAR": "Eisbär",
   "MOB_TYPE__PUFFERFISH": "Kugelfisch",
@@ -396,6 +398,7 @@
   "MOB_TYPE__SPIDER": "Spinne",
   "MOB_TYPE__SQUID": "Tintenfisch",
   "MOB_TYPE__STRAY": "Eiswanderer",
+  "MOB_TYPE__STRIDER": "Schreiter",
   "MOB_TYPE__TRADERLLAMA": "Händerlama",
   "MOB_TYPE__TROPICALFISH": "Tropenfisch",
   "MOB_TYPE__TURTLE": "Schildkröte",
@@ -407,6 +410,7 @@
   "MOB_TYPE__WITHER": "Wither",
   "MOB_TYPE__WITHERSKELETON": "Witherskelett",
   "MOB_TYPE__WOLF": "Wolf",
+  "MOB_TYPE__ZOGLIN": "Zoglin",
   "MOB_TYPE__ZOMBIE": "Zombie",
   "MOB_TYPE__ZOMBIEHORSE": "Zombiepferd",
   "MOB_TYPE__ZOMBIEVILLAGER": "Dorfbewohnerzombie",
