--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -367,6 +367,7 @@
   "MOB_TYPE__GHAST": "Ghast",
   "MOB_TYPE__GIANT": "Giant",
   "MOB_TYPE__GUARDIAN": "Guardian",
+  "MOB_TYPE__HOGLIN": "Hoglin",
   "MOB_TYPE__HORSE": "Horse",
   "MOB_TYPE__HUSK": "Husk",
   "MOB_TYPE__ILLUSIONER": "Illusioner",
@@ -380,7 +381,8 @@
   "MOB_TYPE__PARROT": "Parrot",
   "MOB_TYPE__PHANTOM": "Phantom",
   "MOB_TYPE__PIG": "Pig",
-  "MOB_TYPE__PIGZOMBIE": "Zombie Pigman",
+  "MOB_TYPE__PIGLIN": "Piglin",
+  "MOB_TYPE__PIGZOMBIE": "Zombie Pigman / Zombified Piglin",
   "MOB_TYPE__PILLAGER": "Pillager",
   "MOB_TYPE__POLARBEAR": "PolarBear",
   "MOB_TYPE__PUFFERFISH": "Pufferfish",
@@ -396,6 +398,7 @@
   "MOB_TYPE__SPIDER": "Spider",
   "MOB_TYPE__SQUID": "Squid",
   "MOB_TYPE__STRAY": "Stray",
+  "MOB_TYPE__STRIDER": "Strider",
   "MOB_TYPE__TRADERLLAMA": "Trader Llama",
   "MOB_TYPE__TROPICALFISH": "Tropical Fish",
   "MOB_TYPE__TURTLE": "Turtle",
@@ -407,6 +410,7 @@
   "MOB_TYPE__WITHER": "Wither",
   "MOB_TYPE__WITHERSKELETON": "Wither Skeleton",
   "MOB_TYPE__WOLF": "Wolf",
+  "MOB_TYPE__ZOGLIN": "Zoglin",
   "MOB_TYPE__ZOMBIE": "Zombie",
   "MOB_TYPE__ZOMBIEHORSE": "Zombie Horse",
   "MOB_TYPE__ZOMBIEVILLAGER": "Zombie Villager",
