--- a/src/assets/i18n/zh.json
+++ b/src/assets/i18n/zh.json
@@ -228,7 +228,7 @@
   "COMPONENTS__SKILLS__POISON__CHANCE_POPUP": "<p>宠物击中目标并使其获得中毒效果的几率.<br>格式: [+-][数字]<br>例子:<br>+2<br>-3</p>",
   "COMPONENTS__SKILLS__POISON__DURATION": "持续时间",
   "COMPONENTS__SKILLS__POISON__DURATION_PREFIX": "",
-  "COMPONENTS__SKILLS__POISON__DURATION_SUFFIX": "%",
+  "COMPONENTS__SKILLS__POISON__DURATION_SUFFIX": "秒",
   "COMPONENTS__SKILLS__POISON__DURATION_POPUP": "<p>目标获得的中毒效果持续时间.<br>格式: [+-][数字]<br>例子:<br>+2<br>-3</p>",
   "COMPONENTS__SKILLS__THORNS__CHANCE": "几率",
   "COMPONENTS__SKILLS__THORNS__CHANCE_PREFIX": "",
