--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -346,7 +346,7 @@
   "EFFECT__SAVE_SKILLTREE_FAILED": "Ein Fehler ist während des Speicherns aufgetreten!",
   "EFFECT__RENAME_SKILLTREE__SUCCESS": "{{old}} wurde zu {{new}} umbenannt.",
 
-
+  "MOB_TYPE__ALLAY": "Allay",
   "MOB_TYPE__AXOLOTL": "Axolotl",
   "MOB_TYPE__BAT": "Fledermaus",
   "MOB_TYPE__BEE": "Biene",
@@ -365,6 +365,7 @@
   "MOB_TYPE__ENDERMAN": "Enderman",
   "MOB_TYPE__ENDERMITE": "Endermilbe",
   "MOB_TYPE__EVOKER": "Magier",
+  "MOB_TYPE__FROG": "Frosch",
   "MOB_TYPE__FOX": "Fuchs",
   "MOB_TYPE__GLOWSQUID": "Leucht Tintenfisch",
   "MOB_TYPE__GOAT": "Ziege",
@@ -404,12 +405,14 @@
   "MOB_TYPE__SQUID": "Tintenfisch",
   "MOB_TYPE__STRAY": "Eiswanderer",
   "MOB_TYPE__STRIDER": "Schreiter",
+  "MOB_TYPE__TADPOLE": "Kaulquappe",
   "MOB_TYPE__TRADERLLAMA": "Händerlama",
   "MOB_TYPE__TROPICALFISH": "Tropenfisch",
   "MOB_TYPE__TURTLE": "Schildkröte",
   "MOB_TYPE__VEX": "Plagegeist",
   "MOB_TYPE__VILLAGER": "Dorfbewohner",
   "MOB_TYPE__VINDICATOR": "Diener",
+  "MOB_TYPE__WARDEN": "Warden",
   "MOB_TYPE__WITCH": "Hexe",
   "MOB_TYPE__WANDERINGTRADER": "Fahrender Händler",
   "MOB_TYPE__WITHER": "Wither",
