--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -346,6 +346,7 @@
   "EFFECT__SAVE_SKILLTREE_FAILED": "An error occured while saving the skilltrees!",
   "EFFECT__RENAME_SKILLTREE__SUCCESS": "{{old}} was renamed to {{new}}",
 
+  "MOB_TYPE__ALLAY": "Allay",
   "MOB_TYPE__AXOLOTL": "Axolotl",
   "MOB_TYPE__BAT": "Bat",
   "MOB_TYPE__BEE": "Bee",
@@ -364,6 +365,7 @@
   "MOB_TYPE__ENDERMAN": "Enderman",
   "MOB_TYPE__ENDERMITE": "Endermite",
   "MOB_TYPE__EVOKER": "Evoker",
+  "MOB_TYPE__FROG": "Frog",
   "MOB_TYPE__FOX": "Fox",
   "MOB_TYPE__GLOWSQUID": "Glow Squid",
   "MOB_TYPE__GOAT": "Goat",
@@ -403,12 +405,14 @@
   "MOB_TYPE__SQUID": "Squid",
   "MOB_TYPE__STRAY": "Stray",
   "MOB_TYPE__STRIDER": "Strider",
+  "MOB_TYPE__TADPOLE": "Tadpole",
   "MOB_TYPE__TRADERLLAMA": "Trader Llama",
   "MOB_TYPE__TROPICALFISH": "Tropical Fish",
   "MOB_TYPE__TURTLE": "Turtle",
   "MOB_TYPE__VEX": "Vex",
   "MOB_TYPE__VILLAGER": "Villager",
   "MOB_TYPE__VINDICATOR": "Vindicator",
+  "MOB_TYPE__WARDEN": "Warden",
   "MOB_TYPE__WANDERINGTRADER": "Wandering Trader",
   "MOB_TYPE__WITCH": "Witch",
   "MOB_TYPE__WITHER": "Wither",
