Added 1.20 mobs (whoops)

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -352,6 +352,7 @@
   "MOB_TYPE__BEE": "Biene",
   "MOB_TYPE__BLAZE": "Lohe",
   "MOB_TYPE__CAVESPIDER": "Höhlenspinne",
+  "MOB_TYPE__CAMEL": "Dromedar",
   "MOB_TYPE__CAT": "Katze",
   "MOB_TYPE__CHICKEN": "Huhn",
   "MOB_TYPE__COD": "Kabeljau",
@@ -400,6 +401,7 @@
   "MOB_TYPE__SKELETON": "Skelett",
   "MOB_TYPE__SKELETONHORSE": "Skelettpferd",
   "MOB_TYPE__SLIME": "Schleim",
+  "MOB_TYPE__SNIFFER": "Schnüffler",
   "MOB_TYPE__SNOWMAN": "Schneegolem",
   "MOB_TYPE__SPIDER": "Spinne",
   "MOB_TYPE__SQUID": "Tintenfisch",
