--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -353,6 +353,7 @@
   "MOB_TYPE__BLAZE": "Blaze",
   "MOB_TYPE__CAT": "Cat",
   "MOB_TYPE__CAVESPIDER": "Cave Spider",
+  "MOB_TYPE__CAMEL": "Camel",
   "MOB_TYPE__CHICKEN": "Chicken",
   "MOB_TYPE__COD": "Cod",
   "MOB_TYPE__COW": "Cow",
@@ -400,6 +401,7 @@
   "MOB_TYPE__SKELETON": "Skeleton",
   "MOB_TYPE__SKELETONHORSE": "Skeleton Horse",
   "MOB_TYPE__SLIME": "Slime",
+  "MOB_TYPE__SNIFFER": "Sniffer",
   "MOB_TYPE__SNOWMAN": "Snowman",
   "MOB_TYPE__SPIDER": "Spider",
   "MOB_TYPE__SQUID": "Squid",
