Added 1.20.5 and 1.21 mobs

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -347,10 +347,13 @@
   "EFFECT__RENAME_SKILLTREE__SUCCESS": "{{old}} wurde zu {{new}} umbenannt.",
 
   "MOB_TYPE__ALLAY": "Allay",
+  "MOB_TYPE__ARMADILLO": "Gürteltier",
   "MOB_TYPE__AXOLOTL": "Axolotl",
   "MOB_TYPE__BAT": "Fledermaus",
   "MOB_TYPE__BEE": "Biene",
   "MOB_TYPE__BLAZE": "Lohe",
+  "MOB_TYPE__BOGGED": "Sumpfskelett",
+  "MOB_TYPE__BREEZE": "Böe",
   "MOB_TYPE__CAVESPIDER": "Höhlenspinne",
   "MOB_TYPE__CAMEL": "Dromedar",
   "MOB_TYPE__CAT": "Katze",
