Add Timer field to Heal skill

--- a/src/i18n/resources/en/skills.json
+++ b/src/i18n/resources/en/skills.json
@@ -60,7 +60,8 @@
   "Heal": {
     "label": "Heal",
     "fields": {
-      "health": "Health (+X)"
+      "health": "Health (+X)",
+      "timer": "Timer (s)"
     }
   },
   "Knockback": {
